OAR CHANGELOG
=============

version 2.5.10:
--------------

  - [scheduler] add the SCHEDULER_RESOURCE_ORDER_ADV_RESERVATIONS_THRESHOLD
    option: advance reservations in a near future can use the same resources
    order as batch job, taking into account the standby and besteffort jobs)
  - [oarstat] Add a machine parseable output for -p option
  - [oarstat] Add a machine parseable output for -e (events) option
  - [oarstat] Exit with an error if -p and --sql options are used together
  - [oarnodes] Factorize SQL query used to get resources
  - [oarnodes] Factorize SQL query to get nodes' events
  - [oarnodes] Optimize OAR's resources querying (option -r)
  - [oarnodes] Optimize nodes' states querying
  - [oarnodes] Update usage and man page
  - [oarsub] add a reservation end time possibility to -r option
  - [oarsub] factorize the reservation parsing in interactive condition
  - [oarsub] be more flexible about the reservation dates parsing
  - [oarsub] add the 'now' keyword support to reservation request
  - [man] rework oarsub man page
  - [oarsub] update usage

version 2.5.9:
--------------

  - [scheduler] add the SCHEDULER_RESOURCE_ORDER_ADV_RESERVATIONS option, so
    that the scheduling of advance reservations is not impacted by the current
    state of the resources (e.g. nodes in standby, current besteffort jobs)
  - [admission rules] add an admission rule to restrict advance reservation
    inner jobs to use container jobs that are advance reservations as well
  - [schedulers] fix issues with the scheduling of a inner job before its
    container
  - [schedulers] waiting inner job in container that vanished are set to error
  - [oarexec] add an option to have inner jobs killed along with their container
  - [oarexec] do not run inner jobs before their container is already running
  - [oarwalltime] make walltime change respect a possibly defined job deadline
  - [oarwalltime] add an option to disable the walltime reduction